2013-10-18 Riccardo Mottola  <rm@gnu.org>

	* GRCircle.h
	* GRCircle.m
	* GRDocView.m
	* Graphos.h
	Allow to draw ovals, bump file version, treat old files as circles.

2013-10-15 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
        Silence warning through initialization.

2013-10-10 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (selectObjectAtPoint)
	Vastly improve multiple object selection. Add/remove with shift.
	If Object is re-selected, don't deselect all to allow group move.

2013-09-18 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	* GRBezierPathEditor.m
	* GRBoxEditor.m
	* GRCircleEditor.m
	Silence some initialization warnings.

2013-08-12 Riccardo Mottola <rm@gnu.org>

	* GRPathObject.h
	* GRPathObject.m
	Migrate from int to proper NS enumerated  types.

2013-08-12 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	Scale back zoom factor from path data

2013-07-18 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	Fix bounds initialization (fixes drawing of editor after editing).

2013-07-18 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	Do not print editor during printing context.

2013-07-09 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Fix zoom to Width and to Page.

2013-07-08 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Increase density of Zoom steps.

2013-07-07 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (verifyModifiersOfEvent)
        Change alternate property to check for alternate and not command

2013-07-05 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (usedFonts)
	* GRDocView.h (usedFonts)
	Remove unused method.

2013-07-05 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	* GRBezierPathEditor.h
	* GRBezierPathEditor.m
	* GRDocView.m
	* GRObjectEditor.h
	* GRObjectEditor.m
	* GRText.m
	* GRTextEditor.h
	* GRTextEditor.m
	Refactor and clean up case of isValid, isSelected, isDone

2013-07-05 Riccardo Mottola <rm@gnu.org>

	* GRObjectEditor.m
	When selecting for editing, mark the object as not done.

	* GRDocView.m